--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .App {
+  margin-top: 10px;
   text-align: center;
 }
-
+.productDetails {
+  margin-top: 10 px;
+  border: 10 px solid;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
