--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,12 @@
   margin-top: 10 px;
   border: 10 px solid;
 }
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border-start-end-radius: 2px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
