--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,14 @@
   border: 10 px solid;
 }
 .row {
+  width: 500px;
+  margin-left: 500px;
+  border-width: 1px 1px 1px 1px;
+  border-color: black;
+  border-style: solid;
+  border-radius: 2px;
+  margin-bottom: 10px;
+  margin-top: 10px;
   display: flex;
   flex-direction: row;
   justify-content: center;
